--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@shopify/app": "^3.48.0",
     "@shopify/cli": "^3.48.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vitejs/plugin-react": "^4.0.3",
     "clsx": "^2.1.0",
     "localforage": "^1.10.0",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.49.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
+    "usehooks-ts": "^2.9.5",
     "yup": "^1.3.2"
   },
   "author": "iskurbanov",
