--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.0",
+    "react-modal": "^3.16.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
     "usehooks-ts": "^2.9.5",
