--- a/.github/workflows/shopify-deploy.yml
+++ b/.github/workflows/shopify-deploy.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 18
 
       - name: Install Bundler
-        run: gem install bundler
+        run: sudo gem install bundler
 
       - name: Install Shopify CLI
         run: npm install -g @shopify/cli @shopify/theme
