--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
     "usehooks-ts": "^2.9.5",
+    "uuidv4": "^6.2.13",
     "yup": "^1.3.2"
   },
   "author": "iskurbanov",
