--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vitejs/plugin-react": "^4.0.3",
     "clsx": "^2.1.0",
+    "isomorphic-ws": "^5.0.0",
     "jotai": "^2.6.5",
     "jotai-devtools": "^0.8.0",
     "localforage": "^1.10.0",
