--- a/shopify.app.playgound.toml
+++ b/shopify.app.playgound.toml
@@ -15,6 +15,11 @@ redirect_urls = [ "https://shopify.dev/apps/default-app-home/api/auth" ]
 [webhooks]
 api_version = "2024-01"
 
+[app_proxy]
+url = "https://playground-backend-8j8f.onrender.com/"
+subpath = "image"
+prefix = "apps"
+
 [pos]
 embedded = false
 
