--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.0",
     "react-modal": "^3.16.1",
+    "react-use-websocket": "^3.0.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
     "usehooks-ts": "^2.9.5",
