--- a/shopify.app.mj-devel.toml
+++ b/shopify.app.mj-devel.toml
@@ -16,7 +16,7 @@ redirect_urls = [ "https://shopify.dev/apps/default-app-home/api/auth" ]
 api_version = "2024-01"
 
 [app_proxy]
-url = "https://mj-backend-i2y7w.ondigitalocean.app/"
+url = "https://tunnel.ink-dev.com/"
 subpath = "image"
 prefix = "a"
 
