--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "react-hook-form": "^7.49.0",
   "react-modal": "^3.16.1",
   "react-toastify": "^10.0.5",
+  "react-transition-group": "^4.4.5",
   "react-use-websocket": "^3.0.0",
   "sort-by": "^1.2.0",
   "tailwind-merge": "^2.2.0",
