--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dev": "run-p -sr vite:dev shopify:dev",
   "build": "run-s vite:build shopify:build",
   "deploy": "run-s build prepare cleanup shopify:deploy",
+  "reset": "shopify app dev --reset",
   "shopify": "shopify",
   "shopify:build": "shopify app build",
   "shopify:dev": "shopify app dev",
