--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "@shopify/app": "^3.48.0",
   "@shopify/cli": "^3.48.0",
   "@uidotdev/usehooks": "^2.4.1",
+  "@uploadcare/blocks": "0.36.0",
   "@vitejs/plugin-react": "^4.0.3",
   "clsx": "^2.1.0",
   "freezer-midjourney-api": "^4.0.6",
@@ -41,6 +42,7 @@
   "react-dropzone": "^14.2.3",
   "react-hook-form": "^7.49.0",
   "react-modal": "^3.16.1",
+  "react-share": "^5.1.0",
   "react-toastify": "^10.0.5",
   "react-transition-group": "^4.4.5",
   "react-use-websocket": "^3.0.0",
